@@ -10,6 +10,8 @@ import it.refill.domain.ProgettiFormativi;
 import it.refill.domain.SoggettiAttuatori;
 import it.refill.domain.User;
 import it.refill.entity.FadCalendar;
+import it.refill.util.Utility;
+import static it.refill.util.Utility.estraiEccezione;
 import static it.refill.util.Utility.pregresso;
 import java.io.File;
 import java.util.ArrayList;
@@ -108,7 +110,7 @@ public class Action {
 
         AtomicInteger out_0 = new AtomicInteger(0);
         AtomicInteger out_1 = new AtomicInteger(0);
-        Long hh36 = new Long(129600000);
+        Long hh36 = Long.valueOf(129600000);
 
         Entity e = new Entity();
         e.begin();
@@ -161,7 +163,7 @@ public class Action {
             "0", "0", "0",
             "0", "0", "0"
         };
-        Long hh36 = new Long(129600000);
+        Long hh36 = Long.valueOf(129600000);
         Entity e = new Entity();
         e.begin();
 
@@ -287,7 +289,7 @@ public class Action {
             });
 
         } catch (Exception ex) {
-            //ex.printStackTrace();
+            insertTR("E", "SERVICE", estraiEccezione(ex));
         }
 
         out[0] = String.valueOf(out_0.get());
